@@ -142,6 +142,8 @@ Release 0.21.0 - Unreleased
    HBASE-2026  NPE in StoreScanner on compaction
    HBASE-2072  fs.automatic.close isn't passed to FileSystem
    HBASE-2075  Master requires HDFS superuser privileges due to waitOnSafeMode
+   HBASE-2077  NullPointerException with an open scanner that expired causing 
+               an immediate region server shutdown (Sam Pullara via JD)
 
   IMPROVEMENTS
    HBASE-1760  Cleanup TODOs in HTable
